--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.14",
     "framer-motion": "^10.16.4",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-slick": "^0.29.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "react-window": "^1.8.9",
+    "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.24",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.10",
     "@types/react-vertical-timeline-component": "^3.3.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
