--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,6 @@ jobs:
       
       - name: Run Deployment
         run: |
+            git config --global user.email "actions@github.com"
+            git config --global user.name "GitHub Actions"
             npm run deploy
