--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,27 @@
-name: Update Site
+name: Deploy to GitHub Pages
 
-on: [push, workflow_dispatch,]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-    build:
-      runs-on: ubuntu-latest
-  
-      steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-            fetch-depth: 0
-            ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-            persist-credentials: false
-        
-      - name: NPM install 
-        run: | 
-            npm i
-      
-      - name: Run Deployment
-        run: |
-            git config --global user.email "actions@github.com"
-            git config --global user.name "GitHub Actions"
-            npm run deploy
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '14'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Deploy to GitHub Pages
+      run: npm run deploy
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
