--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       run: npm install
 
     - name: Deploy to GitHub Pages
-      run: npm run deploy
+      run: |
+        git config user.email "actions@github.com"
+        git config user.name "GitHub Actions"
+        npm run deploy
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
