--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,53 @@
-name: Deploy to GitHub Pages
+name: Deploy Website
 
-on:
-  push:
-    branches:
-      - main
+on: [push, workflow_dispatch]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '14'
-
-    - name: Install dependencies
+    - name: Install Packages
       run: npm install
 
-    - name: Deploy to GitHub Pages
+    - name: Create new Branch
+      run: git checkout -b temp
+
+    - name: Setup Github
       run: |
-        git config user.email "actions@github.com"
-        git config user.name "GitHub Actions"
-        npm run deploy
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+
+    - name: Build Project
+      run: npm run build
+    
+    - name: Delete Files
+      run: ls -A | grep -E -v '^(.git|.github|dist)$' | xargs rm -r
+
+    - name: Move Dist Contents out and Delete
+      run: |
+        cd dist
+        mv * ./..
+        cd ..
+        rm -r dist
+    
+    - name: Commit Changes on Temp Branch
+      run: |
+        git add .
+        git commit -m "Update Website"
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Checkout gh-pages Branch
+      run: |
+        git checkout -b gh-pages
+        git merge --allow-unrelated-histories temp -m "Updates"
+        git --set-upstream=origin/gh-pages gh-pages
+        git push
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Delete Temp branch
+      run: git branch -D temp
